# prime_JunyinLuo

prime_jl6530/: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
prime_jl6530/.github/: ISSUE_TEMPLATE.md
prime_jl6530/docs/: Makefile  conf.py  index.rst  installation.rst  usage.rst
prime_jl6530/prime_jl6530/: __init__.py  cli.py  prime_jl6530.py
prime_jl6530/tests/: __init__.py  test_prime_jl6530.py
