[tool.poetry]
name = "prime-jl6530"
version = "0.1.0"
description = ""
authors = ["hm <jl6530@columbia.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
license = "^0.1a3"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
